Fix Spacing in Featured Component

--- a/src/components/Featured/Featured.scss
+++ b/src/components/Featured/Featured.scss
@@ -4,6 +4,8 @@
     box-shadow: 2px 4px 8px 2px rgba(34, 60, 80, 0.2);
     flex: 2;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
 
 
     .top {
@@ -23,21 +25,28 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         gap: 15px;
+        height: 100%;
+
+        .featuredItemsContainer {
+            text-align: center;
+            padding: 5px;
+
+            .title {
+                font-weight: 500;
+                color: gray;
+                margin-bottom: 20px;
+            }
+
+            .amount {
+                font-size: 30px;
+            }
+        }
 
         .featuredChart {
             width: 100px;
             height: 100px;
-        }
-
-        .title {
-            font-weight: 500;
-            color: gray;
-        }
-
-        .amount {
-            font-size: 30px;
         }
 
         .desc {
